--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-data/*_pages_current.xml
+# IDE
+.idea/
+.vscode/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Docker volumes
+.docker/mariadb/data/
+
+# Sensitive config
 src/config.sensitive.php
-.docker/mariadb/data/**
-src/release/**
+
+# Release builds
+src/release/
