perf: enable gzip compression for JSON and static assets

--- a/.docker/apache-php83/vhost.conf
+++ b/.docker/apache-php83/vhost.conf
@@ -1,4 +1,15 @@
 <VirtualHost *:80>
 	ServerName localhost
 	DocumentRoot /var/www/html/public
+	
+	# Enable gzip compression for text-based content
+	<IfModule mod_deflate.c>
+		AddOutputFilterByType DEFLATE application/json
+		AddOutputFilterByType DEFLATE application/javascript
+		AddOutputFilterByType DEFLATE text/html
+		AddOutputFilterByType DEFLATE text/css
+		AddOutputFilterByType DEFLATE text/plain
+		AddOutputFilterByType DEFLATE text/xml
+		AddOutputFilterByType DEFLATE application/xml
+	</IfModule>
 </VirtualHost>
