feat: add production Docker deployment setup

--- a/.docker/apache-php83/vhost.conf
+++ b/.docker/apache-php83/vhost.conf
@@ -2,6 +2,12 @@
 	ServerName localhost
 	DocumentRoot /var/www/html/public
 	
+	<Directory /var/www/html/public>
+		Options -Indexes +FollowSymLinks
+		AllowOverride All
+		Require all granted
+	</Directory>
+	
 	# Enable gzip compression for text-based content
 	<IfModule mod_deflate.c>
 		AddOutputFilterByType DEFLATE application/json
