change caching strategy

--- a/.docker/apache-php83/vhost.conf
+++ b/.docker/apache-php83/vhost.conf
@@ -18,4 +18,13 @@
 		AddOutputFilterByType DEFLATE text/xml
 		AddOutputFilterByType DEFLATE application/xml
 	</IfModule>
+	
+	# Enable ETag and Last-Modified for proper HTTP caching
+	# Browser will cache files but validate with server on each request
+	FileETag MTime Size
+	
+	<FilesMatch "\.json$">
+		# Allow caching but always revalidate with server
+		Header set Cache-Control "no-cache, must-revalidate"
+	</FilesMatch>
 </VirtualHost>
